move formatting of problems to src/
since it is model-independent

--- a/templates/librarylink.cpp.in
+++ b/templates/librarylink.cpp.in
@@ -32,6 +32,7 @@
 #include "error.hpp"
 #include "observable_problems_format_mathlink.hpp"
 #include "physical_input.hpp"
+#include "problems_format_mathlink.hpp"
 #include "slha_io.hpp"
 #include "spectrum_generator_settings.hpp"
 #include "standard_model_two_scale_model.hpp"
@@ -202,9 +203,7 @@ public:
    void put_slha(MLINK link) const;
 
    void put_problems(MLINK link) const;
-   void put_problems(MLINK link, const Problems&) const;
    void put_warnings(MLINK link) const;
-   void put_warnings(MLINK link, const Problems&) const;
    void put_model_spectra(MLINK link) const;
    void calculate_spectrum();
    void check_spectrum(MLINK link) const;
@@ -446,69 +445,6 @@ void Model_data::put_input_parameters(MLINK link) const
 
 /******************************************************************/
 
-template <typename F>
-void put_masses(MLINK link, const F& flags,
-                const std::vector<std::string>& heads = {})
-{
-   for (std::size_t i = 0; i < flags.size(); i++) {
-      if (flags[i]) {
-         MLPutHeads(link, heads);
-         MLPutSymbol(link, @ModelName@_info::particle_names[i].c_str());
-      }
-   }
-}
-
-/******************************************************************/
-
-template <typename F>
-void put_masses(MLINK link, const std::string& rule, const F& flags,
-                const std::vector<std::string>& heads)
-{
-   const auto n_masses = std::count(flags.cbegin(), flags.cend(), true);
-
-   MLPutRule(link, rule);
-   MLPutFunction(link, "List", n_masses);
-   put_masses(link, flags, heads);
-}
-
-/******************************************************************/
-
-template <typename F>
-void put_masses(MLINK link, const std::string& rule,
-                const F& flags1, const std::vector<std::string>& heads1,
-                const F& flags2, const std::vector<std::string>& heads2)
-{
-   const auto n_masses = std::count(flags1.cbegin(), flags1.cend(), true)
-                       + std::count(flags2.cbegin(), flags2.cend(), true);
-
-   MLPutRule(link, rule);
-   MLPutFunction(link, "List", n_masses);
-   put_masses(link, flags1, heads1);
-   put_masses(link, flags2, heads2);
-}
-
-/******************************************************************/
-
-void Model_data::put_problems(MLINK link, const Problems& problems) const
-{
-   if (problems.have_tachyon())
-      put_masses(link, "Tachyons",
-                 problems.get_running_tachyons(), {"M"},
-                 problems.get_pole_tachyons(), {"Pole", "M"});
-   if (problems.no_ewsb())
-      MLPutRuleTo(link, "True", "NoEWSB");
-   if (problems.no_perturbative() || problems.have_non_perturbative_parameter())
-      MLPutRuleTo(link, "True", "NonPerturbative");
-   if (problems.no_sinThetaW_convergence())
-      MLPutRuleTo(link, "True", "NoSinThetaWConvergence");
-   if (problems.have_thrown())
-      MLPutRuleTo(link, "True", "Exceptions");
-   if (problems.have_failed_pole_mass_convergence())
-      put_masses(link, "NoPoleMassConvergence", problems.get_failed_pole_mass_convergence(), {"Pole", "M"});
-}
-
-/******************************************************************/
-
 void Model_data::put_problems(MLINK link) const
 {
    check_spectrum_pointer();
@@ -523,8 +459,7 @@ void Model_data::put_problems(MLINK link) const
 
    for (const auto& m: models) {
       MLPutRule(link, m.get_model_name());
-      MLPutFunction(link, "List", m.number_of_problems());
-      put_problems(link, m);
+      mathlink_format_problems(link, m);
    }
 
    for (const auto& m: solvers) {
@@ -536,14 +471,6 @@ void Model_data::put_problems(MLINK link) const
    mathlink_format_problems(link, observables);
 
    MLEndPacket(link);
-}
-
-/******************************************************************/
-
-void Model_data::put_warnings(MLINK link, const Problems& problems) const
-{
-   if (problems.have_bad_mass())
-      put_masses(link, "ImpreciseMasses", problems.get_bad_masses(), {"M"});
 }
 
 /******************************************************************/
@@ -561,8 +488,7 @@ void Model_data::put_warnings(MLINK link) const
 
    for (const auto& m: models) {
       MLPutRule(link, m.get_model_name());
-      MLPutFunction(link, "List", m.number_of_warnings());
-      put_warnings(link, m);
+      mathlink_format_warnings(link, m);
    }
 
    for (const auto& m: solvers) {
