modernize printing of all spectra

--- a/templates/librarylink.cpp.in
+++ b/templates/librarylink.cpp.in
@@ -600,22 +600,12 @@ void put_spectrum(const @ModelName@_slha& model, MLINK link)
 
 /******************************************************************/
 
-namespace {
-struct Put_spectrum {
-   MLINK link;
-   explicit Put_spectrum(MLINK link_) : link(link_) {}
-   template<typename T>
-   void operator()(const T& model) const { put_spectrum(model, link); }
-};
-} // anonymous namespace
-
 template<typename... Ts>
 void put_spectra(const std::tuple<Ts...>& models, MLINK link)
 {
    MLPutFunction(link, "List", std::tuple_size<std::tuple<Ts...>>::value);
 
-   // @todo Use generic lambda instead of Put_spectrum in C++14
-   Put_spectrum ps(link);
+   const auto ps = [link] (const auto& model) { put_spectrum(model, link); };
    boost::fusion::for_each(models, ps);
 
    MLEndPacket(link);
