add -pipe to flags on unit tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -94,7 +94,7 @@ jobs:
                   --with-himalaya-incdir=/Himalaya-$CXXCOMPILER/include
                   --with-himalaya-libdir=/Himalaya-$CXXCOMPILER/lib64
                   --with-optional-modules=test
-                  --with-cxxflags=\"-std=c++14 -O2 -fPIC -Wall -Wpedantic\"
+                  --with-cxxflags=\"-std=c++14 -O2 -fPIC -Wall -Wpedantic -pipe\"
                "
         env:
           CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
