set C++11 ABI only for g++

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,12 +40,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Conan
+      - name: Install conan
         run: |
           pip3 install --user conan
-          export PATH=$(python3 -c 'import site; print(site.USER_BASE + "/bin")'):$PATH
           conan profile new default --detect
+        env:
+          CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
+
+      - name: Setup conan
+        run: |
           conan profile update settings.compiler.libcxx=libstdc++11 default
+        env:
+          CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
+        if: matrix.CXXCOMPILER == 'g++'
+
+      - name: Install dependencies
+        run: |
+          export PATH=$(python3 -c 'import site; print(site.USER_BASE + "/bin")'):$PATH
           conan remote add conan-hep https://api.bintray.com/conan/expander/conan-hep --force
           conan install . --build=missing
         env:
