libstdc++11 seems to be only available on g++ and Linux

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
   no-meta:
     strategy:
        matrix:
-          OS: [macos-10.15, ubuntu-20.04]
+          OS: [macos-latest, ubuntu-latest]
           CXXCOMPILER: [g++, clang++]
     runs-on: ${{ matrix.OS }}
 
@@ -54,7 +54,7 @@ jobs:
           conan profile update settings.compiler.libcxx=libstdc++11 default
         env:
           CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
-        if: matrix.CXXCOMPILER == 'g++'
+        if: matrix.CXXCOMPILER == 'g++' && matrix.OS == 'ubuntu-latest'
 
       - name: Install dependencies
         run: |
