--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,8 +45,6 @@ jobs:
           pip3 install --user conan
           export PATH=$(python3 -c 'import site; print(site.USER_BASE + "/bin")'):$PATH
           conan profile new default --detect
-        env:
-          CXX: ${{ matrix.CXXCOMPILER }}
 
       - name: Setup conan
         run: |
@@ -54,7 +52,7 @@ jobs:
           conan profile update settings.compiler.libcxx=libstdc++11 default
         env:
           CXX: ${{ matrix.CXXCOMPILER }}
-        if: ${{ matrix.CXXCOMPILER == 'g++' && matrix.OS == 'ubuntu-latest' }}
+        if: ${{ matrix.OS == 'ubuntu-latest' }}
 
       - name: Install dependencies
         run: |
