use more generic name for the operating system

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
           conan profile update settings.compiler.libcxx=libstdc++11 default
         env:
           CXX: ${{ matrix.CXXCOMPILER }}
-        if: ${{ matrix.OS == 'ubuntu-latest' }}
+        if: ${{ runner.os == 'Linux' }}
 
       - name: Install dependencies
         run: |
