--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
   no-meta:
     strategy:
        matrix:
-          OS: [macos-latest, ubuntu-latest]
+          OS: [macos-10.15, ubuntu-20.04]
           CXXCOMPILER: [g++, clang++]
     runs-on: ${{ matrix.OS }}
 
