--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,7 @@ jobs:
         CXXCOMPILER: [g++, clang++]
 
     env:
-      IMAGE_VERSION: '0.4.13'
+      IMAGE_VERSION: '0.4.14'
       FORMCALC_VERSION: '9.9'
       MODELS: 'SM THDMII MSSM CMSSM CMSSMCKM MRSSM2 MRSSM2CKM MSSMCPV MSSMNoFV ScalarLeptoquarks LRLR E6SSM NUHMSSMNoFVHimalaya'
 
@@ -175,6 +175,8 @@ jobs:
                   --with-collier-libdir=/COLLIER/lib
                   --with-himalaya-incdir=/Himalaya-$CXXCOMPILER/include
                   --with-himalaya-libdir=/Himalaya-$CXXCOMPILER/lib64
+                  --with-gm2calc-incdir=/GM2Calc-$CXXCOMPILER/include
+                  --with-gm2calc-libdir=/GM2Calc-$CXXCOMPILER/lib64
                   --with-optional-modules=test
                   --with-cxxflags=\"-std=c++14 -O2 -fPIC -Wall -Wpedantic -Wfloat-equal -pipe\"
                "
