end of line problem

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -165,26 +165,26 @@ jobs:
       - name: Configure
         run: |
            docker exec builder bash -c "
-               cd /FlexibleSUSY &&
-               ./configure
-                  --with-cxx=$CXXCOMPILER
-                  --with-models=$(echo $MODELS| tr ' ' ',')
-                  --with-loop-libraries=collier,looptools
-                  --with-looptools-incdir=/LoopTools-$CXXCOMPILER/include
-                  --with-looptools-libdir=/LoopTools-$CXXCOMPILER/lib64
-                  --with-collier-incdir=/COLLIER/include
-                  --with-collier-libdir=/COLLIER/lib
-                  --enable-himalaya
-                  --with-himalaya-incdir=/Himalaya-$CXXCOMPILER/include
-                  --with-himalaya-libdir=/Himalaya-$CXXCOMPILER/lib64
-                  --enable-gm2calc
-                  --with-gm2calc-incdir=/GM2Calc-$CXXCOMPILER/include
-                  --with-gm2calc-libdir=/GM2Calc-$CXXCOMPILER/lib64
-                  --with-optional-modules=test
-                  --enable-librarylink
+               cd /FlexibleSUSY && \
+               ./configure \
+                  --with-cxx=$CXXCOMPILER \
+                  --with-models=$(echo $MODELS| tr ' ' ',') \
+                  --with-loop-libraries=collier,looptools \
+                  --with-looptools-incdir=/LoopTools-$CXXCOMPILER/include \
+                  --with-looptools-libdir=/LoopTools-$CXXCOMPILER/lib64 \
+                  --with-collier-incdir=/COLLIER/include \
+                  --with-collier-libdir=/COLLIER/lib \
+                  --enable-himalaya \
+                  --with-himalaya-incdir=/Himalaya-$CXXCOMPILER/include \
+                  --with-himalaya-libdir=/Himalaya-$CXXCOMPILER/lib64 \
+                  --enable-gm2calc \
+                  --with-gm2calc-incdir=/GM2Calc-$CXXCOMPILER/include \
+                  --with-gm2calc-libdir=/GM2Calc-$CXXCOMPILER/lib64 \
+                  --with-optional-modules=test \
+                  --enable-librarylink \
                   --with-cxxflags=\"-std=c++14 -O2 -fPIC -Wall -Wpedantic -Wfloat-equal -pipe\"
-               "
-            docker exec builder bash -c "make showbuild"
+           "
+           docker exec builder bash -c "make showbuild"
         env:
           CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
 
