CI - fix error in pack-SM

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -223,6 +223,7 @@ jobs:
           make clean-test-log
 
       - name: Testing pack-SM-src
+        if: ${{ matrix.PART == 2 }}
         env:
           CXXCOMPILER: ${{ matrix.CXXCOMPILER }}
         run: |
